gap fix

--- a/static/queries.css
+++ b/static/queries.css
@@ -111,6 +111,10 @@
     footer{
         height: 100vh
     }
+
+    article{
+        height: 100vh
+    }
 }
 
 /*1250*/
@@ -457,7 +461,7 @@
 @media (max-width: 1080px){
 article{
     background-color: #051f0a;
-    height: 210vh;
+    height: 180vh;
 }
 
 .pricing-section-box {
